[gd_scene load_steps=2 format=3 uid="uid://deqkupbh7ke6w"]

[ext_resource type="Script" path="res://scenes/dialogs/about_dialog/about_dialog.gd" id="1"]

[node name="AboutDialog" type="PanelContainer"]
offset_right = 357.0
offset_bottom = 249.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "DIALOG_ABOUT_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath(".")
focus_mode = 2
horizontal_scroll_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "Developer:
- pattlebass ([color=#4ecca3][url=https://twitter.com/pattlebass_dev]@pattlebass_dev[/url][/color])

Translators:
- StarryWindy (Indonesian)
- dawidsadowski (Polish)

Credits and licenses:
- [color=#4ecca3][url=https://github.com/pattlebass/Music-DJ/blob/main/LICENSE]MusicDJ[/url][/color] by pattlebass
- [color=#4ecca3][url=https://godotengine.org/license]Godot Engine[/url][/color]
- Icons made by [color=#4ecca3][url=https://www.flaticon.com/authors/freepik]Freepik[/url][/color] from [color=#4ecca3][url=https://www.flaticon.com/]www.flaticon.com[/url][/color].
- Gidole Font by [color=#4ecca3][url=https://twitter.com/larsenwork]Andreas Larsen[/url][/color]. [color=#4ecca3][url=https://github.com/pattlebass/Music-DJ/blob/main/assets/fonts/GidoleFont/License.txt]LICENSE[/url][/color]

For any issues regarding copyright, please email me at [color=#4ecca3][url=mailto:pattlebass.dev@gmail.com]pattlebass.dev@gmail.com[/url][/color]."
fit_content = true
scroll_active = false

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "BTN_CLOSE"

[connection signal="gui_input" from="VBoxContainer/ScrollContainer" to="." method="_on_scroll_container_gui_input"]
[connection signal="scroll_ended" from="VBoxContainer/ScrollContainer" to="." method="_on_scroll_container_scroll_ended"]
[connection signal="scroll_started" from="VBoxContainer/ScrollContainer" to="." method="_on_scroll_container_scroll_started"]
[connection signal="meta_clicked" from="VBoxContainer/ScrollContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
